# kadas-albireo2

./: .cibump  .clang-format  .cmake-format.yaml  .git-blame-ignore-revs  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  Dockerfile  EphemToolWidget.ui  Makefile  README.md  README.rst  __init__.py  ci-config.json  com.sourcepole.kadas.appdata.xml  com.sourcepole.kadas.desktop  docker-build.sh  ephem_plugin.py  ephem_tool.py  metadata.txt  mkdocs.nav.yml  mkdocs.yml  publiccode.yml  resources.py  resources.qrc  ui_EphemToolWidget.py  vcpkg.json  zensical.de.toml  zensical.en.toml  zensical.fr.toml  zensical.it.toml  zensical.toml
kadas/analysis/: CMakeLists.txt  kadashillshadefilter.cpp  kadashillshadefilter.h  kadaslineofsight.cpp  kadaslineofsight.h  kadasninecellfilter.cpp  kadasninecellfilter.h  kadasslopefilter.cpp  kadasslopefilter.h  kadasviewshedfilter.cpp  kadasviewshedfilter.h
kadas/app/: CMakeLists.txt  kadas.env.in  kadasannotationlayer.cpp  kadasannotationlayer.h  kadasapplayerhandling.cpp  kadasapplayerhandling.h  kadasapplication.cpp  kadasapplication.h  kadasbookmarksmenu.cpp  kadasbookmarksmenu.h  kadascanvascontextmenu.cpp  kadascanvascontextmenu.h  kadascatalogbrowser.cpp  kadascatalogbrowser.h  kadascatalogprovider.h  kadascrashrpt.cpp  kadascrashrpt.h  kadasdevtools.cpp  kadasdevtools.h  kadasfeedback.cpp  kadasfeedback.h  kadasgpsintegration.cpp  kadasgpsintegration.h  kadasgpssimulator.cpp  kadasgpssimulator.h  kadasgpxintegration.cpp  kadasgpxintegration.h  kadashandlebadlayers.cpp  kadashandlebadlayers.h  kadashelpviewer.cpp  kadashelpviewer.h  kadasitemlayerproperties.cpp  kadasitemlayerproperties.h  kadaslayerrefreshmanager.cpp  kadaslayerrefreshmanager.h  kadaslayertreemodel.cpp  kadaslayertreemodel.h  kadaslayertreeviewmenuprovider.cpp  kadaslayertreeviewmenuprovider.h  kadaslayertreeviewtemporalindicator.h  (+43 more)
kadas/app/3d/: kadas3dintegration.cpp  kadas3dintegration.h  kadas3dlayertreemodel.cpp  kadas3dlayertreemodel.h  kadas3dmapcanvas.cpp  kadas3dmapcanvas.h  kadas3dmapcanvaswidget.cpp  kadas3dmapcanvaswidget.h  kadas3dmapconfigwidget.cpp  kadas3dmapconfigwidget.h  kadas3dmaptool.cpp  kadas3dmaptool.h  kadas3dnavigationwidget.cpp  kadas3dnavigationwidget.h  kadasambientocclusionsettingswidget.cpp  kadasambientocclusionsettingswidget.h  kadaslightswidget.cpp  kadaslightswidget.h  kadasmesh3dsymbolwidget.cpp  kadasmesh3dsymbolwidget.h  kadasphongmaterialwidget.cpp  kadasphongmaterialwidget.h  kadasshadowrenderingsettingswidget.cpp  kadasshadowrenderingsettingswidget.h  kadasskyboxrenderingsettingswidget.cpp  kadasskyboxrenderingsettingswidget.h  map3dconfigwidget.ui
kadas/app/auth/: kadasappauthrequesthandler.cpp  kadasappauthrequesthandler.h  kadasportalauth.cpp  kadasportalauth.h  kadasportaltokenfetcher.cpp  kadasportaltokenfetcher.h
kadas/app/bullseye/: kadasbullseyelayer.cpp  kadasbullseyelayer.h  kadasbullseyewidgetbase.ui  kadasmaptoolbullseye.cpp  kadasmaptoolbullseye.h
kadas/app/devtools/: kadasdevelopertoolsdockwidget.cpp  kadasdevelopertoolsdockwidget.h  kadasnetworkloggerdialog.cpp  kadasnetworkloggerdialog.h  kadasnetworkloggerdialog.ui  kadasnetworkloggerdockwidget.cpp  kadasnetworkloggerdockwidget.h
kadas/app/globe/: CMakeLists.txt  kadasglobebillboardmanager.cpp  kadasglobebillboardmanager.h  kadasglobedialog.cpp  kadasglobedialog.h  kadasglobedialog.ui  kadasglobefeatureidentify.cpp  kadasglobefeatureidentify.h  kadasglobefrustumhighlight.cpp  kadasglobefrustumhighlight.h  kadasglobeintegration.cpp  kadasglobeintegration.h  kadasglobeinteractionhandlers.cpp  kadasglobeinteractionhandlers.h  kadasglobeprojectlayermanager.cpp  kadasglobeprojectlayermanager.h  kadasglobetilesource.cpp  kadasglobetilesource.h  kadasglobevectorlayerproperties.cpp  kadasglobevectorlayerproperties.h  kadasglobevectorlayerproperties.ui  (+2 more)
kadas/core/: CMakeLists.txt  kadas.cpp  kadas.h  kadas_config.h.in  kadasalgorithms.cpp  kadasalgorithms.h  kadascoordinateformat.cpp  kadascoordinateformat.h  kadascoordinateutils.cpp  kadascoordinateutils.h  kadasfileserver.cpp  kadasfileserver.h  kadasitemlayer.cpp  kadasitemlayer.h  kadaslatlontoutm.cpp  kadaslatlontoutm.h  kadaspluginlayer.cpp  kadaspluginlayer.h  kadaspluginlayertype.h  kadasredlininglayer.cpp  kadasredlininglayer.h  kadasredliningrenderer.cpp  kadasredliningrenderer.h  kadassettingstree.cpp  kadassettingstree.h  kadasstatehistory.cpp  kadasstatehistory.h  kadasstatestack.cpp  kadasstatestack.h  kadastemporaryfile.cpp  kadastemporaryfile.h
kadas/gui/: CMakeLists.txt  kadasattributetabledialog.cpp  kadasattributetabledialog.h  kadasattributetypes.cpp  kadasattributetypes.h  kadasbookmarksmenu.cpp  kadasbookmarksmenu.h  kadasbottombar.cpp  kadasbottombar.h  kadascanvasgpsdisplay.cpp  kadascanvasgpsdisplay.h  kadascatalogbrowser.cpp  kadascatalogbrowser.h  kadascatalogbrowserpropertiesdialog.cpp  kadascatalogbrowserpropertiesdialog.h  kadascatalogprovider.cpp  kadascatalogprovider.h  kadasclipboard.cpp  kadasclipboard.h  kadasclipboardutils.h  kadasclipboardutils.mm  kadascoordinatedisplayer.cpp  kadascoordinatedisplayer.h  kadascoordinateinput.cpp  kadascoordinateinput.h  kadascrsselection.cpp  kadascrsselection.h  kadasfeaturepicker.cpp  kadasfeaturepicker.h  kadasfloatinginputwidget.cpp  kadasfloatinginputwidget.h  kadasgeometryrubberband.cpp  kadasgeometryrubberband.h  kadasheightprofiledialog.cpp  kadasheightprofiledialog.h  kadasitemcontextmenuactions.cpp  kadasitemcontextmenuactions.h  kadasitemlayer.cpp  kadasitemlayer.h  kadasitemlayermigration.cpp  (+37 more)
kadas/main/: CMakeLists.txt  main.cpp
kadas/test/: CMakeLists.txt  kadastest.h
python/: CMakeLists.txt  utils.py
python/kadasanalysis/: __init__.py.in  kadasanalysis.sip.in  kadasanalysis_auto.sip  project.py.in  pyproject.toml.in
python/kadascore/: __init__.py.in  kadascore.sip.in  kadascore_auto.sip  project.py.in
python/kadasgui/: __init__.py.in  kadasconversions.sip  kadasgui.sip.in  kadasgui_auto.sip  project.py.in  pyproject.toml.in
tests/: CMakeLists.txt
tests/src/: CMakeLists.txt
(+1282 files in other folders)
